--- a/Us.html
+++ b/Us.html
@@ -133,7 +133,7 @@
                         <img class="img-fluid w-100" src="ph.jpg" alt="">
                     </div>
                     <div class="text-center py-4">
-                        <h5 class="text-truncate">Prakash Hegade</h5>
+                        <h5 class="text-truncate">Prof Prakash Hegade</h5>
                         <p class="m-0" style="color: #555; font-size: 0.9rem;">Course Co-ordinator</p>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                         <img class="img-fluid w-100" src="maam.jpg" alt="">
                     </div>
                     <div class="text-center py-4">
-                        <h5 class="text-truncate">Arundati A</h5>
+                        <h5 class="text-truncate">Prof Arundati A</h5>
                         <p class="m-0" style="color: #555; font-size: 0.9rem;">Course Instructor</p>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                             <img class="img-fluid w-100" src="Anusha.jpg" alt="">
                             <div class="team-social">
                                 <a class="btn btn-outline-primary btn-square" href="https://x.com/AnushaS7605"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://linkedin.com/in/Anusha Shigihalli"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://www.linkedin.com/in/anusha-shigihalli-bb57b4287?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/anusha_shigihalli/"><i class="fab fa-instagram"></i></a>
                                 <a class="btn btn-outline-primary btn-square" href="https://github.com/anushashigihalli"><i class="fab fa-linkedin-in"></i></a>
                             </div>
@@ -253,7 +253,7 @@
         <h5 class="text-white">Anusha U Shigihalli</h5>
         <div class="social-icons d-flex justify-content-center my-3">
             <a class="btn btn-outline-primary btn-square" href="https://x.com/AnushaS7605"><i class="fab fa-twitter"></i></a>
-            <a class="btn btn-outline-primary btn-square" href="https://linkedin.com/in/Anusha Shigihalli"><i class="fab fa-facebook-f"></i></a>
+            <a class="btn btn-outline-primary btn-square" href="https://www.linkedin.com/in/anusha-shigihalli-bb57b4287?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-facebook-f"></i></a>
             <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/anusha_shigihalli/"><i class="fab fa-instagram"></i></a>
             <a class="btn btn-outline-primary btn-square" href="https://github.com/anushashigihalli"><i class="fab fa-linkedin-in"></i></a>
         </div>
