Your commit message here

--- a/Project.html
+++ b/Project.html
@@ -136,7 +136,7 @@
                     <div class="package-item bg-white mb-2">
                         <img class="img-fluid" src="case1.webp" alt="">
                         <div class="p-4">
-                            <a class="h5 text-decoration-none" href="">A real-time bus and metro tracking app that minimizes waiting times and optimizes routes based on traffic conditions.</a>
+                            <a class="h5 text-decoration-none" href="https://kavyauppin7.github.io/DAA/consultancy-website-template/index.html">A real-time bus and metro tracking app that minimizes waiting times and optimizes routes based on traffic conditions.</a>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-center">
                                     <h6 class="m-0">Kavya V Uppin</h6>
@@ -149,7 +149,7 @@
                     <div class="package-item bg-white mb-2">
                         <img class="img-fluid" src="case2.webp" alt="">
                         <div class="p-4">
-                            <a class="h5 text-decoration-none" href="">A system where people can rent bicycles for seamless travel to and from transit stops.</a>
+                            <a class="h5 text-decoration-none" href="https://anushashigihalli.github.io/DAA-Portfolio/">A system where people can rent bicycles for seamless travel to and from transit stops.</a>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-center">
                                     <h6 class="m-0">Anusha U Shigihalli</h6>
@@ -163,7 +163,7 @@
                     <div class="package-item bg-white mb-2">
                         <img class="img-fluid" src="case3.webp" alt="">
                         <div class="p-4">
-                            <a class="h5 text-decoration-none" href="http://127.0.0.1:5500/interior-design-html-template/project.html">Traffic lights that adjust their timings, based on how many vehicles are waiting.</a>
+                            <a class="h5 text-decoration-none" href="https://ananyahiregoudar.github.io/DAA-Portfolio/index.html">Traffic lights that adjust their timings, based on how many vehicles are waiting.</a>
                             <div class="border-top mt-4 pt-4">
                                 <!-- Center the name here -->
                                 <div class="d-flex justify-content-center">
@@ -177,7 +177,7 @@
                     <div class="package-item bg-white mb-2">
                         <img class="img-fluid" src="case4.webp" alt="">
                         <div class="p-4">
-                            <a class="h5 text-decoration-none" href="">A simple app to help people find others going the same way to share rides.</a>
+                            <a class="h5 text-decoration-none" href="https://rithikapatil25.github.io/portfolio.github.io/index.html">A simple app to help people find others going the same way to share rides.</a>
                             <div class="border-top mt-4 pt-4">
                                 <!-- Center the name here -->
                                 <div class="d-flex justify-content-center">
@@ -191,7 +191,7 @@
                     <div class="package-item bg-white mb-2">
                         <img class="img-fluid" src="case5.webp" alt="">
                         <div class="p-4">
-                            <a class="h5 text-decoration-none" href="">A map that shows safe walking and cycling paths in the city.</a>
+                            <a class="h5 text-decoration-none" href="https://anushashigihalli.github.io/DAA-Portfolio/index.html">A map that shows safe walking and cycling paths in the city.</a>
                             <div class="border-top mt-4 pt-4">
                                 <!-- Center the name here -->
                                 <div class="d-flex justify-content-center">
@@ -205,7 +205,7 @@
                     <div class="package-item bg-white mb-2">
                         <img class="img-fluid" src="case6.webp" alt="">
                         <div class="p-4">
-                            <a class="h5 text-decoration-none" href="">A unified digital payment platform for all modes of transportation (buses, metros, e-scooters).</a>
+                            <a class="h5 text-decoration-none" href="https://ananyahiregoudar.github.io/DAA-Portfolio/index.html">A unified digital payment platform for all modes of transportation (buses, metros, e-scooters).</a>
                             <div class="border-top mt-4 pt-4">
                                 <!-- Center the name here -->
                                 <div class="d-flex justify-content-center">
