--- a/Project.html
+++ b/Project.html
@@ -191,7 +191,7 @@
                     <div class="package-item bg-white mb-2">
                         <img class="img-fluid" src="case5.webp" alt="">
                         <div class="p-4">
-                            <a class="h5 text-decoration-none" href="https://anushashigihalli.github.io/DAA-Portfolio/index.html">A map that shows safe walking and cycling paths in the city.</a>
+                            <a class="h5 text-decoration-none" href="https://anushashigihalli.github.io/DAA-Portfolio/">A map that shows safe walking and cycling paths in the city.</a>
                             <div class="border-top mt-4 pt-4">
                                 <!-- Center the name here -->
                                 <div class="d-flex justify-content-center">
