--- a/Us.html
+++ b/Us.html
@@ -169,9 +169,9 @@
                             <img class="img-fluid w-100" src="Anusha.jpg" alt="">
                             <div class="team-social">
                                 <a class="btn btn-outline-primary btn-square" href="https://x.com/AnushaS7605"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://www.linkedin.com/in/anusha-shigihalli-bb57b4287?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://github.com/anushashigihalli"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/anusha_shigihalli/"><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://github.com/anushashigihalli"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://www.linkedin.com/in/anusha-shigihalli-bb57b4287?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                         <div class="text-center py-4">
@@ -185,10 +185,10 @@
                         <div class="team-img position-relative overflow-hidden">
                             <img class="img-fluid w-100" src="Kavya.jpg" alt="">
                             <div class="team-social">
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://github.com/RithikaPatil25"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/rithika_patil25/profilecard/?igsh=OXBtcW5kcDkzNzBu"><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://www.linkedin.com/in/rithika-patil-694a322a9?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://x.com/UppinKavya"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://github.com/kavyauppin7"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://instagram.com/kavyauppin7"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://linkedin.com/in/Kavya Uppin"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                         <div class="text-center py-4">
@@ -202,10 +202,10 @@
                         <div class="team-img position-relative overflow-hidden">
                             <img class="img-fluid w-100" src="Rithika.jpg" alt="">
                             <div class="team-social">
-                                <a class="btn btn-outline-primary btn-square" href="https://x.com/UppinKavya"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://linkedin.com/in/Kavya Uppin"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://instagram.com/kavyauppin7"><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://github.com/kavyauppin7"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://github.com/RithikaPatil25"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/rithika_patil25/profilecard/?igsh=OXBtcW5kcDkzNzBu"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://www.linkedin.com/in/rithika-patil-694a322a9?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                         <div class="text-center py-4">
@@ -220,9 +220,9 @@
                             <img class="img-fluid w-100" src="Ananya.jpg" alt="">
                             <div class="team-social">
                                 <a class="btn btn-outline-primary btn-square" href="https://twitter.com/Ananya Hiregoudar"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://linkedin.com/in/Ananya Hiregoudar"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://github.com/Ananyahiregoudar"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-primary btn-square" href="https://instagram.com/ananya_vh_"><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://github.com/Ananyahiregoudar"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://linkedin.com/in/Ananya Hiregoudar"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                         <div class="text-center py-4">
