--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
         <h5 class="text-white">Anusha U Shigihalli</h5>
         <div class="social-icons d-flex justify-content-center my-3">
             <a class="btn btn-outline-primary btn-square" href="https://x.com/AnushaS7605"><i class="fab fa-twitter"></i></a>
-            <a class="btn btn-outline-primary btn-square" href="https://www.linkedin.com/in/anusha-shigihalli-bb57b4287?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-facebook-f"></i></a>
+            <a class="btn btn-outline-primary btn-square" href="https://github.com/anushashigihalli"><i class="fab fa-facebook-f"></i></a>
             <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/anusha_shigihalli/"><i class="fab fa-instagram"></i></a>
-            <a class="btn btn-outline-primary btn-square" href="https://github.com/anushashigihalli"><i class="fab fa-linkedin-in"></i></a>
+            <a class="btn btn-outline-primary btn-square" href="https://www.linkedin.com/in/anusha-shigihalli-bb57b4287?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
         </div>
         <p class="text-white-50 mb-0">© DESIGN AND ANALYSIS OF ALGORITHMS. All rights reserved.</p>
     </div>
