Your commit message

--- a/Us.html
+++ b/Us.html
@@ -222,7 +222,7 @@
                                 <a class="btn btn-outline-primary btn-square" href="https://twitter.com/Ananya Hiregoudar"><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-outline-primary btn-square" href="https://github.com/Ananyahiregoudar"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-primary btn-square" href="https://instagram.com/ananya_vh_"><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://linkedin.com/in/Ananya Hiregoudar"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-outline-primary btn-square" href="https://www.linkedin.com/in/ananya-v-hiregoudar-1b8834291/"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                         <div class="text-center py-4">
