Your commit here

--- a/Project.html
+++ b/Project.html
@@ -136,7 +136,7 @@
                     <div class="package-item bg-white mb-2">
                         <img class="img-fluid" src="case1.webp" alt="">
                         <div class="p-4">
-                            <a class="h5 text-decoration-none" href="https://kavyauppin7.github.io/DAA/consultancy-website-template/index.html">A real-time bus and metro tracking app that minimizes waiting times and optimizes routes based on traffic conditions.</a>
+                            <a class="h5 text-decoration-none" href="https://kavyauppin7.github.io/DAA/">A real-time bus and metro tracking app that minimizes waiting times and optimizes routes based on traffic conditions.</a>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-center">
                                     <h6 class="m-0">Kavya V Uppin</h6>
