Describe the changes made to the files

--- a/Project.html
+++ b/Project.html
@@ -220,7 +220,7 @@
     </div>    
     <!-- Packages End -->
 
-    <!-- Packages Start -->
+<!-- Packages Start -->
 <div class="container-fluid py-5">
     <div class="container pt-5 pb-3">
         <div class="text-center mb-3 pb-3">
@@ -257,11 +257,29 @@
                     </div>
                 </div>
             </div>
+        </div>
 
+        <!-- Buttons Below Cases -->
+        <div class="text-center mt-4">
+            <button 
+                class="btn" 
+                style="background-color: #7AB730; color: white; padding: 10px 20px; border: none; border-radius: 5px; margin-right: 15px; margin-left: 5px; cursor: pointer;"
+                onclick="window.location.href='single.html';">
+                Case 1
+            </button>
+            <button 
+                class="btn" 
+                style="background-color: #7AB730; color: white; padding: 10px 20px; border: none; border-radius: 5px; margin-left: 15px; cursor: pointer;"
+                onclick="window.location.href='guide.html';">
+                Case 2
+            </button>
         </div>
     </div>
 </div>
 <!-- Packages End -->
+
+
+
 
 <!-- Booking Start -->
 <div class="barr">
@@ -440,16 +458,6 @@ Kruskal's algorithm is ideal for optimizing bike redistribution by minimizing co
     </div>
 </div>
 <!-- Service End -->
-
-
-
-
-
-
-
-
-
-
 
 
 
