--- a/Project.html
+++ b/Project.html
@@ -248,7 +248,7 @@
                 <div class="package-item bg-white mb-2">
                     <img class="img-fluid" src="case5.webp" alt=""/>
                     <div class="p-4">
-                        <a class="h5 text-decoration-none" href="">A map that shows safe walking and cycling paths in the city.</a>
+                        <a class="h5 text-decoration-none" href="">A map that shows safe walking and cycling paths in the city:</a>
                         <div class="border-top mt-4 pt-4">
                             <div class="d-flex justify-content-center">
                                 <h6 class="m-0">Anusha U Shigihalli & Rithika N Patil</h6>
