--- a/guide.html
+++ b/guide.html
@@ -60,7 +60,7 @@
     </style>
 </head>
 <body>
-    <h1 class="text-center">Codes</h1>
+    <h1 class="text-center">A system where people can rent bicycles for seamless travel to and from transit stops:</h1>
 
     <div class="code-editor">
         <button class="run-btn" onclick="runCode()">Run Code</button>
