--- a/single.html
+++ b/single.html
@@ -60,7 +60,7 @@
     </style>
 </head>
 <body>
-    <h1 class="text-center">Code Editor</h1>
+    <h1 class="text-center">A map that shows safe walking and cycling paths in the city:</h1>
 
     <div class="code-editor">
         <button class="run-btn" onclick="runCode()">Run Code</button>
